Possible bugfix for reloading of hibernated tabs on iPhones (Safari)

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -10,7 +10,7 @@ body {
     background-position: 60% 50%;
     "background-image: url(/img/cover.png);
     */
-    height: 100lvh;
+    height: 100svh;
     background-size: 250vh;
 }
 
